kubernetes/joulia-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joulia-frontend
  labels:
    app: joulia-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
#  - port: 443
#    protocol: TCP
#    name: https
  selector:
    app: joulia-frontend
